# tokenizer-workshop

./: README.md  guide.md  pyproject.toml  report.md
src/tokenizer_workshop/: __init__.py  compare.py
src/tokenizer_workshop/api/: main.py  schemas.py  services.py
src/tokenizer_workshop/api/reports/: __init__.py  factory.py  helpers.py  markdown_report.py  pdf_report.py  text_report.py
src/tokenizer_workshop/api/routes/: health.py  tokenize.py
src/tokenizer_workshop/api/schemas/: __init__.py  base.py  compare.py  metrics.py  report.py  tokenize.py
src/tokenizer_workshop/api/services/: __init__.py  compare_service.py  exceptions.py  metrics_service.py  report_service.py  tokenize_service.py  tokenizer_factory.py  utils.py
src/tokenizer_workshop/api/utils/: exception_mapper.py
src/tokenizer_workshop/comparisons/: __init__.py  report.py  runner.py
src/tokenizer_workshop/tokenizers/: __init__.py  discovery.py  punctuation_tokenizer.py  regex_bpe_tokenizer.py  regex_tokenizer.py  registry.py  sentence_piece_tokenizer.py  white_space_tokenizer.py  word_tokenizer.py
src/tokenizer_workshop/tokenizers/guides/: byte_bpe_tokenizer.md  byte_tokenizer.md  char_tokenizer.md
src/tokenizer_workshop/web/: index.html
src/tokenizer_workshop/web/css/: style.css
src/tokenizer_workshop/web/js/: app.js
tests/: test_punctuation_tokenizer.py  test_regex_tokenizer.py  test_sentence_piece_tokenizer.py  test_white_space_tokenizer.py  test_word_tokenizer.py
